# skills_workspace

./: MEMORY.md  README.md  main.py  pyproject.toml
claude/skills/: README.md
claude/skills/arxiv/: README.md  SKILL.md
claude/skills/arxiv/scripts/: arxiv_tool.py  s2_provider.py
claude/skills/bridge-ideas/: SKILL.md
claude/skills/code-reviewer/: SKILL.md
claude/skills/code-reviewer/templates/: review-prompt.md
claude/skills/diagram-generator/: SKILL.md
claude/skills/marp-slides/: SKILL.md
claude/skills/multi-agent/: SKILL.md
claude/skills/note-taking/: SKILL.md
claude/skills/skill-converter/: SKILL.md
claude/skills/skill-creator/: SKILL.md
claude/skills/transcriber/: SKILL.md
claude/skills/workspace-rag/: README.md  SKILL.md
claude/skills/workspace-rag/scripts/: pyproject.toml  start_server.ps1  workspace_rag.py  workspace_rag_server.py
github/: copilot-instructions.md
github/skills/: README.md
github/skills/arxiv/: README.md  SKILL.md
github/skills/arxiv/scripts/: arxiv_fetcher.py  pyproject.toml  rss_provider.py
github/skills/bridge-ideas/: SKILL.md
github/skills/deep-research/: SKILL.md
github/skills/diagram-generator/: draw_diagram.py
github/skills/skill-creator/: SKILL.md
github/skills/skill-importer/: SKILL.md
github/skills/tech-news-curation/: SKILL.md
github/skills/workspace-rag/: README.md  SKILL.md
triggers/: README.md
triggers/rag/: README.md  handler.ps1  trigger.yaml
triggers/technews/: README.md  handler.ps1  trigger.yaml
triggers/weather/: README.md  handler.ps1  trigger.yaml
(+10 files in other folders)
